# lambda-pi-constraint

./: .gitignore  BadRefl.idr  LICENSE  LocalTest.hs  PaperExample_constraints.txt  README.md  badBool.txt  badBoolElim.lp  badSubNames.txt  boolElim.txt  boolElim_badApp.txt  boolElim_badElim.txt  cabal.sandbox.config  chinterJunk.txt  elimTypes.txt  implicit.lp  lambda-pi-constraint.cabal  lambda-pi-constraint.prof.html  lambda-pi-constraint.ps  lambda-pi-plus.cabal  lambda-pi-plus.prof.html  lambda-pi-plus_cf.prof.html  lambda-pi-plus_nocf.prof.html  missingVar.lp  nat3_init.txt  natIf3_b  out.dot.ps  prelude.lp  preludeTypes.txt  q  scratch.txt  test.lp  test.out  test_subs.out
.cabal-sandbox/: add-source-timestamps  world
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/mtl-2.2.1-Aue4leSeVkpKLsfHIV51E8/Control/Monad/: Cont.dyn_hi  Cont.hi  Error.dyn_hi  Error.hi  Except.dyn_hi  Except.hi  Identity.dyn_hi  Identity.hi  List.dyn_hi  List.hi  RWS.dyn_hi  RWS.hi  Reader.dyn_hi  Reader.hi  State.dyn_hi  State.hi  Trans.dyn_hi  Trans.hi  Writer.dyn_hi  Writer.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/mtl-2.2.1-Aue4leSeVkpKLsfHIV51E8/Control/Monad/Cont/: Class.dyn_hi  Class.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/mtl-2.2.1-Aue4leSeVkpKLsfHIV51E8/Control/Monad/Error/: Class.dyn_hi  Class.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/mtl-2.2.1-Aue4leSeVkpKLsfHIV51E8/Control/Monad/RWS/: Class.dyn_hi  Class.hi  Lazy.dyn_hi  Lazy.hi  Strict.dyn_hi  Strict.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/mtl-2.2.1-Aue4leSeVkpKLsfHIV51E8/Control/Monad/Reader/: Class.dyn_hi  Class.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/mtl-2.2.1-Aue4leSeVkpKLsfHIV51E8/Control/Monad/State/: Class.dyn_hi  Class.hi  Lazy.dyn_hi  Lazy.hi  Strict.dyn_hi  Strict.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/mtl-2.2.1-Aue4leSeVkpKLsfHIV51E8/Control/Monad/Writer/: Class.dyn_hi  Class.hi  (+4 more)
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/parsec-3.1.9-8bOz3HeEMD67ZDdQubQs32/Text/: Parsec.dyn_hi  Parsec.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/parsec-3.1.9-8bOz3HeEMD67ZDdQubQs32/Text/Parsec/: ByteString.dyn_hi  ByteString.hi  Char.dyn_hi  Char.hi  Combinator.dyn_hi  Combinator.hi  Error.dyn_hi  Error.hi  Expr.dyn_hi  Expr.hi  Language.dyn_hi  Language.hi  Perm.dyn_hi  Perm.hi  Pos.dyn_hi  Pos.hi  Prim.dyn_hi  Prim.hi  String.dyn_hi  String.hi  Text.dyn_hi  Text.hi  Token.dyn_hi  Token.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/parsec-3.1.9-8bOz3HeEMD67ZDdQubQs32/Text/ParserCombinators/: Parsec.dyn_hi  Parsec.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/pretty-1.1.3.2-GTns21GMda46X7YuiNUipW/Text/: PrettyPrint.dyn_hi  PrettyPrint.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/pretty-1.1.3.2-GTns21GMda46X7YuiNUipW/Text/PrettyPrint/: Annotated.dyn_hi  Annotated.hi  HughesPJ.dyn_hi  HughesPJ.hi  HughesPJClass.dyn_hi  HughesPJClass.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/readline-1.0.3.0-LhW0CAEIVrvCOHNig0WVsm/System/Console/: Readline.dyn_hi  Readline.hi  SimpleLineEditor.dyn_hi  SimpleLineEditor.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/readline-1.0.3.0-LhW0CAEIVrvCOHNig0WVsm/include/: HsReadlineConfig.h
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/text-1.2.1.3-FGvB6qqz81tFju4pBPAqne/Data/: Text.dyn_hi  Text.hi
.cabal-sandbox/lib/x86_64-linux-ghc-7.10.2.20151105/text-1.2.1.3-FGvB6qqz81tFju4pBPAqne/Data/Text/: Array.dyn_hi  Array.hi  Encoding.dyn_hi  Encoding.hi  Foreign.dyn_hi  Foreign.hi  IO.dyn_hi  IO.hi  Internal.dyn_hi  Internal.hi  Lazy.dyn_hi  Lazy.hi  Read.dyn_hi  Read.hi  Show.dyn_hi  Show.hi  Unsafe.dyn_hi  Unsafe.hi
.cabal-sandbox/x86_64-linux-ghc-7.10.2.20151105-packages.conf.d/: mtl-2.2.1-67e4baf2f9bf59db0c81cfcb53561cca.conf  package.cache  parsec-3.1.9-84bbdb8165910fe5a8cc51da8a9046af.conf  pretty-1.1.3.2-84c59e3aeead25c1b433b4bb2d0bbbb8.conf  readline-1.0.3.0-23b7b8a580098861fbc6bf8de65ca8dc.conf  text-1.2.1.3-c80e6dc2ed664a06d551c3c8a54df71b.conf
examples/: AgdaPrelude.agda  AgdaPrelude.agdai  BadRefl.agda  BadRefl.agdai  BadRefl.lp  Bias.lp  NatElim.lp  NatIf3.agda  NoSig.agda  NoSig.agdai  SimplePoly.lp  TooFewArgs.agdai  TooFewArgsWrongType.lp  TooManyArgs.agda  TooManyArgs.lp  VecFlip.agda  VecFlip.agdai
paperExamples/: badOp.lp
src/: Common.hs  Constraint.hs  ConstraintBased.hs  Main.hs  Original.hs  Parse.hs  Solver.hs  Utils.hs
src/Language/: LambdaPiPlus.hs
src/Language/LambdaPiPlus/: Internals.hs
src/PatternUnify/: Check.hs  ConstraintInfo.hs  Context.hs  Kit.hs  README.txt  Run.hs  SolverConfig.hs  Test.hs  Tm.hs  TypeGraphStuff.hs  Unify.hs
src/Top/: Constraint.hs  Solver.hs  Types.hs
src/Top/Constraint/: Equality.hs  Information.hs  Polymorphism.hs  Qualifier.hs
src/Top/Implementation/: Basic.hs  FastSubstitution.hs  General.hs  Overloading.hs  SimpleSubstitution.hs  TypeGraphSubstitution.hs  TypeInference.hs
src/Top/Implementation/TypeGraph/: ApplyHeuristics.hs  Basics.hs  Class.hs  ClassMonadic.hs  DefaultHeuristics.hs  EquivalenceGroup.hs  Heuristic.hs  Path.hs  Standard.hs
src/Top/Interface/: Basic.hs  Qualification.hs  Substitution.hs  TypeInference.hs
src/Top/Monad/: Select.hs  StateFix.hs
src/Top/Ordering/: Tree.hs  TreeWalk.hs
src/Top/Solver/: Greedy.hs  PartitionCombinator.hs  SwitchCombinator.hs  TypeGraph.hs
src/Top/Types/: Classes.hs  Kinds.hs  Primitive.hs  Qualification.hs  Quantification.hs  Schemes.hs  Substitution.hs  Synonym.hs  Unification.hs
src/Top/Util/: Embedding.hs  Empty.hs  Option.hs
thesisExamples/: AgdaPrelude.agdai  ArgsWrongOrder.agda  ArgsWrongOrder.agdai  ArgsWrongOrder.idr  ArgsWrongOrder.lp  BadRefl.agda  BadRefl.agdai  BadRefl.ibc  BadRefl.idr  BadRefl.lp  BadReflPost.lp  Bias.agda  Bias.idr  Bias.lp  IdrisPrelude.ibc  IdrisPrelude.idr  PlusReverse.lp  TooFewArgs.agda  TooFewArgs.ibc  TooFewArgs.idr  TooFewArgs.lp  TooFewArgsWrongType.agda  TooManyArgs.idr  VecFlip.lp  WrongTypeArg.lp  paperExample1.lp  paperExample_bias1.lp
toFix/: pruningError.lp
(+94 files in other folders)
