
name:                lambda-pi-plus
version:             0.1.0.0
synopsis: A small dependently-typed language for research and learning purposes.
description: LambdaPiPlus extends the language LambdaPi, from
  ["A Tutorial Implementation of a Dependently Typed Lambda Calculus."](https://www.andres-loeh.de/LambdaPi/).
  The language has been extended with Dependent Pairs and metavariables, in place of implicit arguments.
  The unification algorithm used is adapted from
  ["A tutorial implementation of dynamic pattern unification"](http://adam.gundry.co.uk/pub/pattern-unify/).
-- license:
license-file:        LICENSE
author:              Joey Eremondi
maintainer:          joey@eremondi.com
copyright: Joseph Eremondi, 2016
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable lambda-pi-constraint
  -- -prof -fprof-auto -fprof-auto -fprof-cafs
  ghc-options:
        -O2  -fwarn-incomplete-patterns -fwarn-unused-imports -prof -fprof-auto -fprof-auto -fprof-cafs -rtsopts
  main-is:             Main.hs
  other-modules:
    ConstraintBased,
    Common,
    Constraint,
    PatternUnify.Check,
    PatternUnify.Context,
    PatternUnify.Run,
    PatternUnify.Tm,
    PatternUnify.Unify
  -- other-extensions:
  build-depends:       base >=4.7 && <4.9
                       , mtl
                       , parsec
                       , pretty
                       , containers
                       , unbound-generics
  hs-source-dirs:      src
  default-language:    Haskell2010
