
name:                lambda-pi-plus
version:             0.1.0.0
synopsis: A small dependently-typed language for research and learning purposes.
description: LambdaPiPlus extends the language LambdaPi, from
  ["A Tutorial Implementation of a Dependently Typed Lambda Calculus."](https://www.andres-loeh.de/LambdaPi/).
  The language has been extended with Dependent Pairs and metavariables, in place of implicit arguments.
  The unification algorithm used is adapted from
  ["A tutorial implementation of dynamic pattern unification"](http://adam.gundry.co.uk/pub/pattern-unify/).
-- license:
license-file:        LICENSE
author:              Joey Eremondi
maintainer:          joey@eremondi.com
copyright: Joseph Eremondi, 2016
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
    type:     git
    location: git://github.com/JoeyEremondi/lambda-pi-plus.git

executable lambda-pi-plus
  -- -prof -fprof-auto -fprof-auto -fprof-cafs
  ghc-options:
        -O2  -Wall -fprof-auto -fprof-auto -fprof-cafs -rtsopts
  main-is:             Main.hs
  other-modules:
    ConstraintBased
    , Common
    , Constraint
    , PatternUnify.Check
    , PatternUnify.Context
    , PatternUnify.Run
    , PatternUnify.Tm
    , PatternUnify.Unify
    , PatternUnify.ConstraintInfo

    , Top.Implementation.TypeGraph.Basics
    , Top.Implementation.TypeGraph.Class
    , Top.Implementation.TypeGraph.Standard
    , PatternUnify.Kit
    , PatternUnify.SolverConfig
    , Top.Constraint
    , Top.Constraint.Information
    , Top.Implementation.General
    , Top.Implementation.TypeGraph.ApplyHeuristics
    , Top.Implementation.TypeGraph.ClassMonadic
    , Top.Implementation.TypeGraph.DefaultHeuristics
    , Top.Implementation.TypeGraph.EquivalenceGroup
    , Top.Implementation.TypeGraph.Heuristic
    , Top.Implementation.TypeGraph.Path
    , Top.Interface.Basic
    , Top.Interface.Qualification
    , Top.Interface.Substitution
    , Top.Interface.TypeInference
    , Top.Monad.Select
    , Top.Monad.StateFix
    , Top.Solver
    , Top.Types
    , Top.Types.Classes
    , Top.Types.Kinds
    , Top.Types.Primitive
    , Top.Types.Qualification
    , Top.Types.Quantification
    , Top.Types.Schemes
    , Top.Types.Substitution
    , Top.Types.Synonym
    , Top.Types.Unification
    , Top.Util.Embedding
    , Top.Util.Empty
    , Top.Util.Option
    , Utils



  -- other-extensions:
  build-depends:       base >= 4.11.1.0
                       , mtl
                       , parsec
                       , pretty
                       , containers
                       , unbound-generics
                       , transformers
                       , regex-compat
  hs-source-dirs:      src
  default-language:    Haskell2010

-- library
--   -- -prof -fprof-auto -fprof-auto -fprof-cafs
--   ghc-options:
--         -O2  -fwarn-incomplete-patterns -fwarn-unused-imports
--   exposed-modules:
--     Language.LambdaPiPlus
--   other-modules:
--     ConstraintBased,
--     Common,
--     Constraint,
--     Main,
--     PatternUnify.Check,
--     PatternUnify.Context,
--     PatternUnify.Run,
--     PatternUnify.Tm,
--     PatternUnify.Unify,
--     Language.LambdaPiPlus.Internals
--   -- other-extensions:
--   build-depends:       base >=4.7 && <4.9
--                        , mtl
--                        , parsec
--                        , pretty
--                        , containers
--                        , unbound-generics
--                        , template-haskell
--                        , th-lift
--   hs-source-dirs:      src
--   default-language:    Haskell2010
